edit post markup
